{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 112,
  "lineage": "99cdefb2-7d5c-2967-3e17-bc8418caf1f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:loadbalancer/app/fleetdm/0eda5a8d06eb63c1",
            "arn_suffix": "app/fleetdm/0eda5a8d06eb63c1",
            "desync_mitigation_mode": "defensive",
            "dns_name": "fleetdm-1067042399.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:loadbalancer/app/fleetdm/0eda5a8d06eb63c1",
            "idle_timeout": 120,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fleetdm",
            "preserve_host_header": false,
            "security_groups": [
              "sg-074d228cc510c52d8",
              "sg-0bbbfa355302d850a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c5ddf8f807f46e6"
              },
              {
                "subnet_id": "subnet-0b3a8283714773fc7"
              },
              {
                "subnet_id": "subnet-0ed493131b341a548"
              }
            ],
            "subnets": [
              "subnet-07c5ddf8f807f46e6",
              "subnet-0b3a8283714773fc7",
              "subnet-0ed493131b341a548"
            ],
            "vpc_id": "vpc-0957d6bd76b3e0c95",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:listener/app/fleetdm/0eda5a8d06eb63c1/b3f252b7a24b9d37",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:listener/app/fleetdm/0eda5a8d06eb63c1/b3f252b7a24b9d37",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:loadbalancer/app/fleetdm/0eda5a8d06eb63c1",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_security_group.backend",
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https-fleetdm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:listener/app/fleetdm/0eda5a8d06eb63c1/fb6450ea978885f8",
            "certificate_arn": "arn:aws:acm:eu-west-2:750197000277:certificate/6eee7564-47a8-4df6-a2e8-8f6bffb1de60",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:targetgroup/fleetdm/d963cdaaf92a27e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:listener/app/fleetdm/0eda5a8d06eb63c1/fb6450ea978885f8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:loadbalancer/app/fleetdm/0eda5a8d06eb63c1",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-FS-1-2-Res-2019-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.main",
            "aws_security_group.backend",
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:targetgroup/fleetdm/d963cdaaf92a27e6",
            "arn_suffix": "targetgroup/fleetdm/d963cdaaf92a27e6",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 15,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:750197000277:targetgroup/fleetdm/d963cdaaf92a27e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "least_outstanding_requests",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fleetdm",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "aws_alb.main",
            "aws_security_group.backend",
            "aws_security_group.lb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:security-group/sg-0bbbfa355302d850a",
            "description": "tide-testfleet Backend security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tide-testfleet: allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbbfa355302d850a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "tide-testfleet: allow traffic from load balancer",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074d228cc510c52d8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tide-testfleet backend",
            "name_prefix": "",
            "owner_id": "750197000277",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:security-group/sg-074d228cc510c52d8",
            "description": "tide-testfleet Load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tide-testfleet: allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074d228cc510c52d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tide-testfleet: allow traffic from public internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tide-testfleet: allow traffic from public internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tide-testfleet load balancer",
            "name_prefix": "",
            "owner_id": "750197000277",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:security-group/sg-09227f1b2c6ccda2f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis VPC egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09227f1b2c6ccda2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.233.10.0/24",
                  "10.233.11.0/24",
                  "10.233.12.0/24"
                ],
                "description": "Redis from private VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "tide-testfleet-elasticache-redis",
            "name_prefix": "",
            "owner_id": "750197000277",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tide-testfleet: allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-2686849075",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bbbfa355302d850a",
            "security_group_rule_id": "sgr-0d4e15bc993885cc4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "backend-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "tide-testfleet: allow traffic from load balancer",
            "from_port": 8080,
            "id": "sgrule-2349025175",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bbbfa355302d850a",
            "security_group_rule_id": "sgr-0c3f1a941df00dfef",
            "self": false,
            "source_security_group_id": "sg-074d228cc510c52d8",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend",
            "aws_security_group.lb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Redis VPC egress",
            "from_port": 0,
            "id": "sgrule-246482875",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09227f1b2c6ccda2f",
            "security_group_rule_id": "sgr-0b50cfaef956434fc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.233.10.0/24",
              "10.233.11.0/24",
              "10.233.12.0/24"
            ],
            "description": "Redis from private VPC",
            "from_port": 6379,
            "id": "sgrule-3547863299",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09227f1b2c6ccda2f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.redis",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tide-testfleet: allow all outbound traffic",
            "from_port": 0,
            "id": "sgrule-3384010936",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-074d228cc510c52d8",
            "security_group_rule_id": "sgr-027360df376406004",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-http-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tide-testfleet: allow traffic from public internet",
            "from_port": 80,
            "id": "sgrule-3066333736",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d228cc510c52d8",
            "security_group_rule_id": "sgr-05a121aa400bfd596",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "tide-testfleet: allow traffic from public internet",
            "from_port": 443,
            "id": "sgrule-4128444578",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074d228cc510c52d8",
            "security_group_rule_id": "sgr-0f83133fd612f232f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora_mysql",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:security-group/sg-0ee0e7593dceefc80",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ee0e7593dceefc80",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.233.10.0/24",
                  "10.233.11.0/24",
                  "10.233.12.0/24"
                ],
                "description": "From allowed CIDRs",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fleetdm-mysql-iam-2022092906523127200000000b",
            "name_prefix": "fleetdm-mysql-iam-",
            "owner_id": "750197000277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora8-fleetdm-mysql-iam"
            },
            "tags_all": {
              "Name": "aurora8-fleetdm-mysql-iam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:network-acl/acl-0c89e517973e4c33c",
            "default_network_acl_id": "acl-0c89e517973e4c33c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c89e517973e4c33c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "750197000277",
            "subnet_ids": [
              "subnet-0308f842e260cf722",
              "subnet-0368fe1512a35029e",
              "subnet-043ba20e0557c33eb",
              "subnet-0598e6a4b993832c3",
              "subnet-07c5ddf8f807f46e6",
              "subnet-080df2884ef93ebe0",
              "subnet-087a2e366b60babbf",
              "subnet-0b3a8283714773fc7",
              "subnet-0c639b2740197727f",
              "subnet-0d13f3e95a444acc5",
              "subnet-0df2c44ff31db2190",
              "subnet-0ed493131b341a548"
            ],
            "tags": {
              "Name": "fleet-vpc-default"
            },
            "tags_all": {
              "Name": "fleet-vpc-default"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:route-table/rtb-0448cdf6c98d5e3fc",
            "default_route_table_id": "rtb-0448cdf6c98d5e3fc",
            "id": "rtb-0448cdf6c98d5e3fc",
            "owner_id": "750197000277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fleet-vpc-default"
            },
            "tags_all": {
              "Name": "fleet-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:security-group/sg-0cace17551cf3db97",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0cace17551cf3db97",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "750197000277",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fleet-vpc-default"
            },
            "tags_all": {
              "Name": "fleet-vpc-default"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec51ba1b56410b4a",
            "association_id": "eipassoc-0c81cd0102f9bcee5",
            "domain": "vpc",
            "id": "eipalloc-0ec51ba1b56410b4a",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-012e6e5d4e8ed1742",
            "private_dns": "ip-10-233-13-106.eu-west-2.compute.internal",
            "private_ip": "10.233.13.106",
            "public_dns": "ec2-13-41-216-195.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.41.216.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fleet-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "fleet-vpc-eu-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:internet-gateway/igw-0b540b27ca197c77f",
            "id": "igw-0b540b27ca197c77f",
            "owner_id": "750197000277",
            "tags": {
              "Name": "fleet-vpc"
            },
            "tags_all": {
              "Name": "fleet-vpc"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec51ba1b56410b4a",
            "association_id": "eipassoc-0c81cd0102f9bcee5",
            "connectivity_type": "public",
            "id": "nat-0029be82a2e8c5935",
            "network_interface_id": "eni-012e6e5d4e8ed1742",
            "private_ip": "10.233.13.106",
            "public_ip": "13.41.216.195",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed493131b341a548",
            "tags": {
              "Name": "fleet-vpc-eu-west-2a"
            },
            "tags_all": {
              "Name": "fleet-vpc-eu-west-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0de17e5d6b53cb02a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0029be82a2e8c5935",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de17e5d6b53cb02a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b540b27ca197c77f",
            "id": "r-rtb-008d9ce684ae1d2571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008d9ce684ae1d257",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:route-table/rtb-0b8ba214630e65f1f",
            "id": "rtb-0b8ba214630e65f1f",
            "owner_id": "750197000277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fleet-vpc-db"
            },
            "tags_all": {
              "Name": "fleet-vpc-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:route-table/rtb-0b7a0dce54dfd7107",
            "id": "rtb-0b7a0dce54dfd7107",
            "owner_id": "750197000277",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fleet-vpc-elasticache"
            },
            "tags_all": {
              "Name": "fleet-vpc-elasticache"
            },
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:route-table/rtb-0de17e5d6b53cb02a",
            "id": "rtb-0de17e5d6b53cb02a",
            "owner_id": "750197000277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0029be82a2e8c5935",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fleet-vpc-private"
            },
            "tags_all": {
              "Name": "fleet-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:route-table/rtb-008d9ce684ae1d257",
            "id": "rtb-008d9ce684ae1d257",
            "owner_id": "750197000277",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b540b27ca197c77f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fleet-vpc-public"
            },
            "tags_all": {
              "Name": "fleet-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0570c2be705742031",
            "route_table_id": "rtb-0b8ba214630e65f1f",
            "subnet_id": "subnet-043ba20e0557c33eb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8fcf8e28d1ef03f",
            "route_table_id": "rtb-0b8ba214630e65f1f",
            "subnet_id": "subnet-087a2e366b60babbf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090baec1667632c0a",
            "route_table_id": "rtb-0b8ba214630e65f1f",
            "subnet_id": "subnet-0d13f3e95a444acc5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051dd0a2396607961",
            "route_table_id": "rtb-0b7a0dce54dfd7107",
            "subnet_id": "subnet-0598e6a4b993832c3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f61b08818b3ecbd0",
            "route_table_id": "rtb-0b7a0dce54dfd7107",
            "subnet_id": "subnet-0df2c44ff31db2190"
          },
          "dependencies": [
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fba895393490ec16",
            "route_table_id": "rtb-0b7a0dce54dfd7107",
            "subnet_id": "subnet-0368fe1512a35029e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad45c9614f0e1ef4",
            "route_table_id": "rtb-0de17e5d6b53cb02a",
            "subnet_id": "subnet-080df2884ef93ebe0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05016243c7e65d875",
            "route_table_id": "rtb-0de17e5d6b53cb02a",
            "subnet_id": "subnet-0308f842e260cf722"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0594ce8d26a0de7ad",
            "route_table_id": "rtb-0de17e5d6b53cb02a",
            "subnet_id": "subnet-0c639b2740197727f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b86b2576301b485c",
            "route_table_id": "rtb-008d9ce684ae1d257",
            "subnet_id": "subnet-0ed493131b341a548"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a2f92b9da8d72c3",
            "route_table_id": "rtb-008d9ce684ae1d257",
            "subnet_id": "subnet-07c5ddf8f807f46e6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035f3d12a113b96e5",
            "route_table_id": "rtb-008d9ce684ae1d257",
            "subnet_id": "subnet-0b3a8283714773fc7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-043ba20e0557c33eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.233.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043ba20e0557c33eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-db-eu-west-2a"
            },
            "tags_all": {
              "Name": "fleet-vpc-db-eu-west-2a"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-087a2e366b60babbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.233.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087a2e366b60babbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-db-eu-west-2b"
            },
            "tags_all": {
              "Name": "fleet-vpc-db-eu-west-2b"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0d13f3e95a444acc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.233.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d13f3e95a444acc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-db-eu-west-2c"
            },
            "tags_all": {
              "Name": "fleet-vpc-db-eu-west-2c"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0598e6a4b993832c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.233.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0598e6a4b993832c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-elasticache-eu-west-2a"
            },
            "tags_all": {
              "Name": "fleet-vpc-elasticache-eu-west-2a"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0df2c44ff31db2190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.233.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df2c44ff31db2190",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-elasticache-eu-west-2b"
            },
            "tags_all": {
              "Name": "fleet-vpc-elasticache-eu-west-2b"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0368fe1512a35029e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.233.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0368fe1512a35029e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-elasticache-eu-west-2c"
            },
            "tags_all": {
              "Name": "fleet-vpc-elasticache-eu-west-2c"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-080df2884ef93ebe0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.233.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080df2884ef93ebe0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "fleet-vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0308f842e260cf722",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.233.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0308f842e260cf722",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "fleet-vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0c639b2740197727f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.233.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c639b2740197727f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "fleet-vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0ed493131b341a548",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.233.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed493131b341a548",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "fleet-vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-07c5ddf8f807f46e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.233.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c5ddf8f807f46e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "fleet-vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:subnet/subnet-0b3a8283714773fc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.233.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3a8283714773fc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750197000277",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fleet-vpc-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "fleet-vpc-public-eu-west-2c"
            },
            "vpc_id": "vpc-0957d6bd76b3e0c95"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:750197000277:vpc/vpc-0957d6bd76b3e0c95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.233.0.0/16",
            "default_network_acl_id": "acl-0c89e517973e4c33c",
            "default_route_table_id": "rtb-0448cdf6c98d5e3fc",
            "default_security_group_id": "sg-0cace17551cf3db97",
            "dhcp_options_id": "dopt-2f6b1547",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0957d6bd76b3e0c95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0448cdf6c98d5e3fc",
            "owner_id": "750197000277",
            "tags": {
              "Name": "fleet-vpc"
            },
            "tags_all": {
              "Name": "fleet-vpc"
            }
          }
        }
      ]
    }
  ]
}